[gd_scene load_steps=5 format=3 uid="uid://b3ejiflx50po5"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_a72ly"]
[ext_resource type="Texture2D" uid="uid://byxvk7pjl8cu0" path="res://icon.svg" id="2_meqfp"]

[sub_resource type="SystemFont" id="SystemFont_ikrq0"]
font_names = PackedStringArray("Impact")

[sub_resource type="SystemFont" id="SystemFont_wfylw"]
font_names = PackedStringArray("Impact")

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a72ly")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_meqfp")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 120

[node name="Separator" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = SubResource("SystemFont_ikrq0")
theme_override_font_sizes/font_size = 64
text = "Isekai"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 30)
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="Separator2" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Play_button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_wfylw")
theme_override_font_sizes/font_size = 30
text = "Play"

[node name="Exit_button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_wfylw")
theme_override_font_sizes/font_size = 30
text = "boton 1"
